--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
-/laskarit/viikko2/Maksukortti/nbproject/
-/laskarit/viikko2/Maksukortti/target/
-/laskarit/viikko2/Unicafe/target/
+#harjoitustyö
+WeatherObservationJournal/target
+
+#laskarit
+laskarit/viikko2/Maksukortti/target
+laskarit/viikko2/Maksukortti/nbproject
+laskarit/viikko2/Unicafe/target
