--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ WeatherObservationJournal/*.db
 laskarit/viikko2/Maksukortti/target
 laskarit/viikko2/Maksukortti/nbproject
 laskarit/viikko2/Unicafe/target
+/WeatherObservationJournal/nbproject/
